[tool.poetry]
name = "asyncio-users"
version = "0.1.0"
description = "async user managment for python"
authors = ["Eric Cardozo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.2"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
asyncio = "^3.4.3"
websockets = "^12.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.group.tests.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
